# tauri-nspopover-plugin

./: Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: test.yml
example/: index.html  package.json  pnpm-lock.yaml
example/src/: main.ts  styles.css
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: hide_popover.toml  is_popover_shown.toml  show_popover.toml
permissions/schemas/: schema.json
src/: action.rs  delegate.rs  lib.rs  popover.rs  statusbar.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  tsconfig.json
