[package]
name = "tauri-plugin-nspopover"
version = "2.1.0"
authors = [ "freethinkel" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api", "tray-icon", "icon-png"] }
serde = "1.0"
thiserror = "1.0"
icrate = { version = "0.1.0", features = ["Foundation", "Foundation_all", "AppKit", "AppKit_NSPopover", "AppKit_NSWindow", "AppKit_NSWindowController", "AppKit_NSViewController", "AppKit_NSStatusBar", "AppKit_NSStatusItem", "AppKit_NSButton", "AppKit_NSStatusBarButton", "AppKit_NSImage", "AppKit_NSColor"] }
objc = "0.2.7"
cocoa = "0.25.0"
