[package]
name = "tauri-plugin-nspopover"
version = "4.0.1"
authors = ["freethinkel"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
links = "tauri-plugin-nspopover"

[dependencies]
tauri = { version = "2.2.5", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
serde = "1.0"
objc = "0.2.7"
cocoa = "0.25.0"
objc2-app-kit = { version = "0.3.1", features = [
  "NSPopover",
  "NSButton",
  "NSColor",
  "NSViewController",
] }
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1" }
tray-icon = { git = "https://github.com/freethinkel/tray-icon" }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
