[package]
name = "example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-plugin-nspopover = { path = "../../" }
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-plugin-nspopover", branch = "tauri-beta/v2" }
